<resources>
    <string name="app_name">GoCorona Tracker</string>
    <string name="confirmed">Confirmed</string>
    <string name="active">Active</string>
    <string name="recovered">Recovered</string>
    <string name="deceased">Deceased</string>
    <string name="state_ut">State/UT</string>
    <string name="last_synced">Last synced</string>
    <string name="district">District</string>
    <string name="worldwide">Worldwide</string>
    <string name="india">India</string>
    <string name="search_country">Search country</string>
    <string name="choose_country">Choose country</string>
    <string name="country">Country</string>
    <string name="search">Search</string>
    <string name="active_cases">Active Cases</string>
    <string name="press_back_again_to_exit">Press back again to exit!</string>
    <string name="setting_night_mode">Night mode</string>
    <string name="setting_night_mode_desc">Select theme</string>
    <string name="setting_app_language">App Language</string>
    <string name="setting_app_language_desc">Choose Language</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about_developer">About Developer</string>
    <string name="credits">Credits</string>
    <string name="visit_my_blog">Visit my blog</string>
    <string name="about_me_desc">Sandesh Baliga P.\nGeek, Explorer &amp; more!</string>
    <string name="india_data">India Data</string>
    <string name="world_data">World Data</string>
    <string name="graph_library">Graph Library</string>
    <string name="piechart_library">PieChart Library</string>
    <string name="symptoms">Symptoms</string>
    <string name="symptoms_desc">COVID-19 Virus affects different people in different ways. Check out More!</string>
    <string name="preventive_measures">Preventive measures</string>
    <string name="preventive_measures_desc">Check how to prevent infection and to slow down transmission of COVID-19</string>
    <string name="advice_from_who">Advice from WHO</string>
    <string name="myths">Myths Debunked</string>
    <string name="myths_desc">Learn about common misconceptions about the COVID-19</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_desc">Please note that all data shown here are from the COVID APIs. It may not exactly be realtime data.</string>
    <string name="source_covid19india_org">Source: covid19India.org</string>
    <string name="source_corona_ninja">Source: corona.ninja.lmao</string>
    <string name="check_internet_connection">Please check your internet connection!</string>
    <string name="syncing_latest_data">Syncing latest data…</string>
    <string name="synced_successfully">Synced successfully</string>
    <string name="couldnt_sync_data">Couldn\'t sync data. Please try again!</string>
</resources>