<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_background"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp_16">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/health_tips" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:orientation="vertical">

                <!-- Symptoms-->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_symptoms"
                    style="@style/CardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="@dimen/dp_12">

                        <ImageView
                            android:layout_width="@dimen/dp_64"
                            android:layout_height="@dimen/dp_64"
                            android:src="@drawable/ic_translate_24" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_12"
                            android:layout_marginEnd="@dimen/dp_12"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextAppearance.MaterialComponents.Body1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/symptoms" />

                            <TextView
                                style="@style/TextAppearance.MaterialComponents.Caption"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/symptoms_desc" />
                        </LinearLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Preventive measures -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_preventive_measures"
                    style="@style/CardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="@dimen/dp_12">

                        <ImageView
                            android:layout_width="@dimen/dp_64"
                            android:layout_height="@dimen/dp_64"
                            android:src="@drawable/ic_translate_24" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_12"
                            android:layout_marginEnd="@dimen/dp_12"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextAppearance.MaterialComponents.Body1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/preventive_measures" />

                            <TextView
                                style="@style/TextAppearance.MaterialComponents.Caption"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/preventive_measures_desc" />
                        </LinearLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Preventive measures -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_myths_debunked"
                    style="@style/CardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="@dimen/dp_12">

                        <ImageView
                            android:layout_width="@dimen/dp_64"
                            android:layout_height="@dimen/dp_64"
                            android:src="@drawable/ic_translate_24" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_12"
                            android:layout_marginEnd="@dimen/dp_12"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextAppearance.MaterialComponents.Body1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/myths" />

                            <TextView
                                style="@style/TextAppearance.MaterialComponents.Caption"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/myths_desc" />
                        </LinearLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="@string/advice_from_who" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_who_images"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginBottom="@dimen/dp_8"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_image" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>